# heredicalc

./: .gitignore  LICENSE  environment.yml  gitignore  matrix_test.csv  rr_test.py  run.sh  setup.cfg  setup.py  setup_.py  setup_logging.py
V3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
core/: setup_logging.py
cumulative_risk_models/: cumulative_risk_model.py  cumulative_risk_model_factory.py  simple_cumulative_risk_model.py
cumulative_risks/: cumulative_risk_model.py  cumulative_risk_model_factory.py  simple_cumulative_risk_model.py
data_sources/incidences/: sources.yaml
incidences/: data_handler.py  sources.yaml
incidences/incidence_data_source_handlers/: csv_handler.py  data_source_handler.py  data_source_handler_factory.py  uncompressed_data_handler.py  zip_data_handler.py
incidences/incidence_models/: ci5_detailed_incidence_model.py  ci5_summary_incidence_model.py  incidence_data_model.py  incidence_data_model_factory.py
incidences/parsers/: ci5_detailed_parser.py  ci5_summary_parser.py  data_parser.py  data_parser_factory.py
install/: environment.yml  install_r_packages.R  requirements.txt
pedconv/: ped_convert.py
pedconv/exporters/: cool_pedigree_exporter.py  pedigree_exporter_factory.py  segregatr_flb_pedigree_exporter.py
pedconv/importers/: pedigree_importer.py  pedigree_importer_factory.py
penetrances/: crhf.yaml  crhf_models.py  data_handler.py  penetrance_model_factory.py  penetrance_models.py
src/core/: config.py  (+1 more)
tests/: 91-00005-05.ped  91-00005-TNBC.ped  91-00050.ped.txt  91-00050b.ped.txt  91-00051.ped.txt  91-00052.ped.txt  91-00053.ped.txt  91-00054.ped.txt  91-00055.ped.txt  91-00056.ped.txt  91-00057.ped.txt  cool.test.ped  data_handler.py  penetrance_flb_output.R  penetrance_plain_output.txt  penetrance_test.py  segregat.test.R
(+393 files in other folders)
