# setup.cfg
[metadata]
name = HerediCalc
version = 0.9.0
description = A package for pedigree data handling, penetrance calculation and co-segregation analysis
author = Benjamin Bruno
author_email = kontakt@brunomomento.de
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://example.com/HerediCalc

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas
    numpy
    pyyaml
    requests
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    incidences=bin.incidences:main
    cumulative_risks=bin.cumulative_risks:main
    relative_risks=bin.relative_risks:main
    crhf=bin.crhf:main
    penetrances=bin.penetrances:main
    pedconv=bin.pedconv:main
    flb=bin.flb:main