# setup.cfg
[metadata]
name = heredicalc
version = 0.9.0
description = A package for pedigree data handling, penetrance calculation and co-segregation analysis
author = Benjamin Bruno
author_email = kontakt@brunomomento.de
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/leckermatz79/heredicalc

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas
    numpy
    pyyaml
    requests
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    incidences=heredicalc.bin.incidences:main
    cumulative_risks=heredicalc.bin.cumulative_risks:main
    relative_risks=heredicalc.bin.relative_risks:main
    crhf=heredicalc.bin.crhf:main
    penetrances=heredicalc.bin.penetrances:main
    pedconv=heredicalc.bin.pedconv:main
    flb=heredicalc.bin.flb:main